@@ -26,15 +26,15 @@ import java.lang.annotation.Target;
 import static java.lang.annotation.ElementType.TYPE;
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
 
-@Retention(RUNTIME)
-@Target(TYPE)
-@Documented
-@Inherited
 /**
  * Annotation provides the ability to add additional modules in declarative way
  *
  * @since 5.0
  */
-public @interface InjectExtraModules {
-    Class[] extraModules() default {};
+@Retention(RUNTIME)
+@Target(TYPE)
+@Documented
+@Inherited
+public @interface ExtraModules {
+    Class<?>[] value();
 }
