@@ -33,7 +33,7 @@ public class WeakReferenceStrategyServerRuntimeProvider extends ServerRuntimePro
 
     public WeakReferenceStrategyServerRuntimeProvider(@Inject ServerCaseDataSourceFactory dataSourceFactory,
                                                       @Inject ServerCaseProperties properties,
-                                                      @Inject ServerCaseExtraModulesProperties extraModulesProperties,
+                                                      @Inject ServerCaseExtraModules extraModulesProperties,
                                                       @Inject Provider<DbAdapter> dbAdapterProvider,
                                                       @Inject UnitDbAdapter unitDbAdapter) {
         super(dataSourceFactory, properties, extraModulesProperties, dbAdapterProvider, unitDbAdapter);
